Ajout d'un message d'avertissement sur une visite positive avant ouverture d'un ets en projet Correction du titre de l'évenement ajouté au calendrier des comission dans l'ajout/modif d'un dossier en lien avec les titre des établissements modifiés Correction d'un problème d'overflow et align center sur l'auto-complete des nom des contacts existants sur les établissements Correction d'un problème de style sur les onglets sélectionnés dans dossiers et ets Correction d'un problème sur le filtre "classe" dans la recherche des établissements Correction d'un warning sur variable $this->afficherChamps non définit dans le template dossier/general sur les nouveaux dossiers Correction d'erreurs sur ajout et suppression d'un modèle de rapport avec quotes dans le fichier Correction de l'ajout d'un RDV dans le calendrier pour un établissement contenant des quotes

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -776,10 +776,6 @@ text-decoration: none;
     text-shadow: none;
 }
 
-li .white_link {
-    background-color: white;
-}
-
 .main-container-fluid {
     display: table-cell;
     width: 10%;
@@ -847,7 +843,6 @@ li .white_link {
   margin-bottom: 0;
 }
 
-.menu_dashboard li.active a ,
 .menu_dashboard li:hover a
 {
   background: #f9f9f9;
